<resources>
    <string name="app_name">Bonimed</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_products">Danh sách sản phẩm</string>
    <string name="nav_item_cart">Giỏ hàng</string>
    <string name="nav_item_orders">Danh sách đơn hàng</string>
    <string name="nav_item_call">Liên hệ : 0973 446 447</string>
    <string name="nav_item_logout">Đăng xuất</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_products</item>
        <item>@string/nav_item_cart</item>
        <item>@string/nav_item_orders</item>
        <item>@string/nav_item_call</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_products">Danh sách sản phẩm</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_orders">Danh sách đơn hàng</string>
    <string name="title_detail_order">Chi tiết đơn hàng</string>

    <string name="input_text_hint">Nhập tên sản phẩm bạn muốn tìm</string>
    <string name="input_text_hint_cart">Nhập tên sản phẩm bạn muốn thêm vào giỏ</string>
    <string name="input_text_hint_order">Nhập mã hoá đơn hoặc ngày mua bạn muốn tìm</string>

    <string name="hot_line">Hotline : 0973 446 447</string>
    <string name="welcome">Welcome</string>

    <string name="license_url">Bonimed.vn</string>
    <string name="license">BẢN QUYỀN THUỘC SỞ HỮU CỦA BONIMED</string>

    <string name="hint_username">Tên tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_sign_up">Đăng nhập</string>
    <string name="err_msg_username">Tên tài khoản không được để trống</string>

    <string name="text_total">Tổng số có : </string>
    <string name="save_cart">Xác nhận mua</string>
    <string name="cancel_cart">Huỷ đơn hàng</string>

    <string name="product_money">Tiền hàng</string>
    <string name="service_money">Phí SHIP (Giao hàng)</string>
    <string name="total_money">Tổng tiền tạm tính</string>

    <string name="code_bill">Mã hoá đơn</string>
    <string name="date_purchase">Ngày mua</string>
    <string name="total_money_bill">Tổng tiền</string>
    <string name="detal_bill">Chi tiết</string>
    <string name="purchase">Mua</string>

    <string name="error_connection">Bạn đang không truy cập Internet</string>
    <string name="error_connection_message">Hãy truy cập Internet rồi thử lại nhé</string>

    <string name="toast_order_product">Sản phẩm này đã được thêm vào giỏ hàng</string>
    <string name="toast_remove_product">Sản phẩm này đã bị xoá khỏi giỏ hàng</string>


    <string name="information_product">Thông tin sản phẩm</string>
    <string name="purchase_product">Mua hàng</string>
    <string name="price_product">Đơn giá</string>


    <string name="title_remove_cart">Huỷ đơn hàng</string>
    <string name="title_remove_product">Huỷ sản phẩm</string>
    <string name="message_remove_product">Bạn muốn xoá sản  phẩm khỏi đơn hàng phải không?</string>
    <string name="message_remove_cart">Bạn muốn huỷ đơn hàng này phải không?</string>
    <string name="text_positive">Đồng ý</string>
    <string name="text_negative">Không</string>

    <string name="message_save_data">Bạn có muốn lưu tài khoản trên máy không?</string>

    <string name="order_success">Quý khách vừa đặt đơn thành công trên hệ thống Bonimed</string>
    <string name="order_success_1">Đơn hàng của quý khách sẽ được giao</string>
    <string name="order_success_2">Mọi vấn đề phát sinh xin vui lòng liên lạc qua\nHotline : 0973 446 447</string>


    <string name="title_no_connection">Không có kết nối internet</string>
    <string name="message_no_connection">Hãy kết nối với internet rồi thử lại</string>
    <string name="positive_no_connection">OK</string>

    <string name="message_updating">Tính năng này sẽ cập nhật sau!!!</string>

    <string name="message_overload">Chỉ có thể mua tối đa : </string>

    <string name="title_dont_have_price">Sản phẩm giá biến động (không nhận trả lại)</string>
    <string name="title_have_price">Sản phẩm giá ổn định</string>

</resources>
