<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_order_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/order_success"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_order_success_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_order_success"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/order_success_1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_order_success_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_order_success_1"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/order_success_2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_order_success_2"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@null"
        android:text="@string/positive_no_connection"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp" />

</RelativeLayout>