<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_hot_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:includeFontPadding="false"
        android:text="@string/hot_line"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_hot_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:includeFontPadding="false"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_edittext"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/effect_button"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/license"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold" />

</RelativeLayout>