<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/border_black">

            <TextView
                android:id="@+id/tv_bill_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/code_bill"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_black">

            <TextView
                android:id="@+id/tv_bill_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/date_purchase"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/border_black">

            <TextView
                android:id="@+id/tv_bill_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/total_money_bill"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@drawable/border_black">

            <TextView
                android:id="@+id/tv_bill_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/detal_bill"
                android:padding="@dimen/_3sdp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>